# pico-sdk-nixos-template

./: CMakeLists.txt  LICENSE.txt  README.md  flake.nix  main.c
